--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,9 @@ repositories {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+    compile group: 'org.jline', name: 'jline', version: '3.10.0'
+    compile 'com.github.ajalt:mordant:1.2.0'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
@@ -22,4 +24,13 @@ compileKotlin {
 }
 compileTestKotlin {
     kotlinOptions.jvmTarget = "1.8"
+}
+
+jar {
+    manifest {
+        attributes(
+                'Main-Class': 'ru.hse.supertux3.ui.CLIKt'
+        )
+    }
+    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
 }
