--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,9 @@ plugins {
     id 'idea'
 }
 
+apply plugin: 'kotlin'
+
+
 group 'ru.hse.supertux3'
 version '1.0-SNAPSHOT'
 
@@ -11,9 +14,11 @@ sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
+    jcenter()
 }
 
 dependencies {
+    implementation 'com.beust:klaxon:5.0.1'
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     compile group: 'org.jline', name: 'jline', version: '3.10.0'
     compile 'com.github.ajalt:mordant:1.2.0'
