--- a/build.gradle
+++ b/build.gradle
@@ -18,11 +18,13 @@ repositories {
 }
 
 dependencies {
-    implementation 'com.beust:klaxon:5.0.1'
+    compile 'com.beust:klaxon:5.0.1'
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     compile group: 'org.jline', name: 'jline', version: '3.10.0'
     compile 'com.github.ajalt:mordant:1.2.0'
     testCompile group: 'junit', name: 'junit', version: '4.12'
+
+    compile "org.jetbrains.kotlin:kotlin-reflect:1.3.0"
 }
 
 compileKotlin {
