--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,35 @@
-plugins {
-    id 'java'
-    id 'org.jetbrains.kotlin.jvm' version '1.3.21'
-    id 'idea'
+
+
+buildscript {
+    ext.kotlin_version = '1.3.+'
+
+    repositories {
+        mavenCentral()
+        jcenter()
+    }
+    dependencies {
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.google.protobuf:protobuf-gradle-plugin:0.8.+'
+    }
 }
 
+
 apply plugin: 'kotlin'
+apply plugin: 'com.google.protobuf'
+apply plugin: 'idea'
 
 
 group 'ru.hse.supertux3'
 version '1.0-SNAPSHOT'
+
+sourceSets {
+    main {
+        java {
+            srcDirs 'src/main/java', 'build/generated/source/proto/main/java',
+                    'build/generated/source/proto/main/grpc'
+        }
+    }
+}
 
 sourceCompatibility = 1.8
 
@@ -18,27 +39,37 @@ repositories {
 }
 
 dependencies {
+    compile 'com.google.protobuf:protobuf-java:3.+'
+    compile 'io.grpc:grpc-stub:1.+'
+    compile 'io.grpc:grpc-protobuf:1.+'
+    compile "io.grpc:grpc-netty:1.+"
+    compile "io.grpc:grpc-testing:1.+"
+    compile group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.2'
+    compile group: 'io.netty', name: 'netty-tcnative-boringssl-static', version: '2.0.+'
+
+
     compile 'com.beust:klaxon:5.0.1'
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     compile group: 'org.jline', name: 'jline', version: '3.10.0'
     compile 'com.github.ajalt:mordant:1.2.0'
     testCompile group: 'junit', name: 'junit', version: '4.12'
-
     compile "org.jetbrains.kotlin:kotlin-reflect:1.3.0"
+
 }
 
-compileKotlin {
-    kotlinOptions.jvmTarget = "1.8"
-}
-compileTestKotlin {
-    kotlinOptions.jvmTarget = "1.8"
-}
-
-jar {
-    manifest {
-        attributes(
-                'Main-Class': 'ru.hse.supertux3.ui.CLIKt'
-        )
+protobuf {
+    protoc {
+        artifact = 'com.google.protobuf:protoc:3.+'
     }
-    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+    plugins {
+        grpc {
+            artifact = 'io.grpc:protoc-gen-grpc-java:1.+'
+        }
+    }
+    generateProtoTasks {
+        all()*.plugins {
+            grpc {}
+        }
+    }
 }
+
