added kotlin sourceDir

--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,9 @@ sourceSets {
             srcDirs 'src/main/java', 'build/generated/source/proto/main/java',
                     'build/generated/source/proto/main/grpc'
         }
+        kotlin {
+            srcDirs 'src/main/kotlin'
+        }
     }
 }
 
